Added other pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="application-button" id="listApp">To Do</button>
             <button class="application-button" id="calcApp">Calculator</button>
             <button class="application-button" id="restaurantApp">Local Menu</button>
-            <button class="application-button" id="mappApp">Map</button>
+            <button class="application-button" id="mapApp">Map</button>
             <button class="application-button" id="settingsApp">Settings</button>
         </div> 
     </div>
